buttons fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -64,7 +64,7 @@ main {
                 background: transparent;
                 font-size: 1rem;
                 font-family: inherit;
-                color: $desaturated-blue;
+                color: #AAADDF;
         
                 &.active {
                     color: #fff;
